# weather_app_yew

./: .gitignore  .rusty-hook.toml  Cargo.toml  README.md  Trunk.toml  rustfmt.toml  rusty-hook.toml
src/: lib.rs  main.rs  root.rs
src/components/: header.rs
src/pages/: index.css  index_page.rs
